// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`horizontal should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 40px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 200px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 4000px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 1000 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 40000px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 400000px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render component 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 120px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: flex;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render fragments 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 80px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render non elements 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: auto; height: 100%;"
  >
    <div
      style="position: relative; visibility: hidden; width: 80px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; width: 100px; height: 800px;"
  >
    <div
      style="position: relative; visibility: hidden; width: 200px; height: 100%; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should change components 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <ul
      style="position: relative; height: 200px; margin: 0px;"
    >
      <li
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </li>
      <li
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </li>
      <li
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </li>
      <li
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </li>
      <li
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`should pass attributes to element 1`] = `
<DocumentFragment>
  <div
    aria-label="test"
    class="class"
    id="id"
    role="list"
    style="display: block; width: 100%; height: auto; background: red;"
    tabindex="0"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 40px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 40px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 200px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 4000px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 1000 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 40000px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 400000px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render component 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 120px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render fragments 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 80px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render non elements 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100%; height: auto;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 80px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="display: block; width: 100px; height: 800px;"
  >
    <div
      style="position: relative; visibility: hidden; width: 100%; height: 200px; pointer-events: auto;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
